fix logo in header of about page - not overflowing on mobile anymore

--- a/css/index.css
+++ b/css/index.css
@@ -438,6 +438,9 @@ footer p {
   margin: 4% 10% 1% 10%;
   padding: 0;
 }
+.aboutHeader a img {
+  max-width: 100%;
+}
 .aboutHeader .rectangle1 {
   width: 446px;
   max-width: 100%;
