--- a/less/about-page.less
+++ b/less/about-page.less
@@ -6,6 +6,10 @@
     a {
         margin: 4% 10% 1% 10%;
         padding: 0;
+
+        img {
+            max-width: 100%;
+        }
     }
 
     .rectangle1 {
